# Nova

./: .buildinfo  .clang-format  .clang-tidy  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ARCH.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile  Makefile  README.md  ROADMAP.md  TODO.md  abditus.html  abditus.src.backend.autodiff.html  abditus.src.backend.core.html  abditus.src.backend.graph.html  abditus.src.backend.html  abditus.src.backend.operations.html  abditus.src.blocks.html  abditus.src.html  abditus.src.initialisers.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.sh  src.backend.autodiff.html  src.backend.core.html  src.backend.graph.html  src.backend.html  src.backend.operations.html  src.blocks.html  (+2 more)
abmath/: CMakeLists.txt  compile.sh  main.cpp
abmath/src/AbMath/core/: MathOps.cpp  main.cpp  tensor.cpp  tensor.h  tensor.tpp
abmath/src/AbMath/python/: bindings.cpp
abmath/src/AbMath/templates/: vector.h
abmath/src/templates/: operations.h  vector.h
abmath/tools/: compile_run_delete.sh
fusion/: .gitignore  CMakeLists.txt  README.md  compile.sh  format.sh
fusion/benchmarks/: CMakeLists.txt
fusion/benchmarks/eigen/: CMakeLists.txt  EigenBenchmark.cpp  eigen_benchmark.cpp
fusion/benchmarks/fusion/: CMakeLists.txt  FusionBenchmark.cpp  fusion_benchmark.cpp
fusion/src/Fusion/: Random.h  Random.hpp  Tensor.h  TensorFactory.h  TensorFactory.hpp  main.cpp  random.h  tensor.h  tensor_factory.h  tmp_compile.sh
fusion/src/Fusion/alloc/: AllocTypes.h  AllocatorInterface.h  BFCPool.h  BFCPoolAllocator.cpp  BFCPoolAllocator.h  CPUSubAllocator.cpp  CPUSubAllocator.h  DefaultAllocator.h  Pool.h  PoolAllocator.h  SubAllocatorInterface.h
fusion/src/Fusion/autodiff/: ADTensor.h  ADTensor.hpp  ADTypes.h  ADTypes.hpp  AutodiffBridge.h  AutodiffBridge.hpp  AutodiffMeta.h  AutodiffMeta.hpp  AutodiffMode.h  AutodiffMode.hpp  BackwardResult.hpp  Dispatch.h  Dispatch.hpp  Engine.h  Engine.hpp  EngineContext.h  EngineContext.hpp  Graph.h  Graph.hpp  Node.h  Node.hpp  NodeInterface.h  NodeInterface.hpp  Sort.h  Sort.hpp  Traits.h  _Node.h
fusion/src/Fusion/autodiff/operations/: Operation.h  main.cpp
fusion/src/Fusion/autodiff/operations/LinAlg/: Registry.cpp
fusion/src/Fusion/autodiff/policies/: Operation.h
fusion/src/Fusion/autodiff/policies/Comparison/: Comparison.h  GreaterThan.h  GreaterThanEqual.h  Maximum.h
fusion/src/Fusion/autodiff/policies/Ewise/: Add.h  Divide.h  Ewise.h  Multiply.h  Pow.h  Subtract.h
fusion/src/Fusion/autodiff/policies/LinAlg/: LinAlg.h  MatMul.h  SwapAxes.h  Transpose.h
fusion/src/Fusion/autodiff/registry/: Operation.hpp
fusion/src/Fusion/common/: Checks.h  Checks.hpp  Hints.h  Hints.hpp  Log.h  Log.hpp
fusion/src/Fusion/core/: Broadcast.cpp  Broadcast.h  BroadcastIter.h  BroadcastIter.hpp  DType.h  DTypes.h  Device.h  Dtype.h  ElementWise.h  ElementWise.hpp  EwiseIter.hpp  EwiseMeta.h  EwiseMeta.hpp  Ffunc.h  Layout.h  PlanMeta.hpp  RawTensor.hpp  Reduce.h  Reduce.hpp  Reduction.cpp  Reduction.h  ReductionIter.hpp  TensorBase.h  TensorBase.hpp  TensorIter.hpp  TensorPlan.cpp  TensorPlan.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.hpp  Traits.h  broadcast.cpp  broadcast.h  broadcast_iter.h  element_wise.h  ffunc.h  main.cpp  queue.cpp  tensor.h  tensor.tpp  (+5 more)
fusion/src/Fusion/cpu/: SimdTags.h  SimdTags.hpp  SimdTraits.h  SimdTraits.hpp  simd_tags.h  simd_traits.h
fusion/src/Fusion/cpu/blas/: BlasFallback.hpp  BlasTags.hpp  BlasTraits.hpp  Gemm.h  Gemm.hpp
fusion/src/Fusion/cpu/blas/backend/: Gemm.hpp  (+1 more)
fusion/src/Fusion/cpu/simd/: SimdTags.hpp  SimdTraits.hpp  Vec128Neon.h  Vec128Neon.hpp  VecFallback.hpp  VecNeon128.hpp  vec128_neon.cpp  vec128_neon.h
fusion/src/Fusion/device/: Device.h  Device.hpp  DeviceType.h
fusion/src/Fusion/eigen/: eigen_helpers.h  eigen_tensor.h
fusion/src/Fusion/kernels/: Blas.cpp  Blas.h  Serial.cpp  Serial.h  Serial.hpp  Xsimd.cpp  binary_ops.cpp  blas_api.cpp  cblas.cpp  cblas_api.cpp  reduction_ops.cpp  serial_api.cpp  unary_ops.cpp  xsimd_api.cpp
fusion/src/Fusion/ops/: Binary.h  Comparison.h  Comparison.hpp  Ewise.h  Ewise.hpp  Helpers.h  Helpers.hpp  Linalg.h  Linalg.hpp  OpParams.h  OpParams.hpp  Operation.h  Reduce.h  Reduce.hpp  Transcendental.h  Transcendental.hpp  Unary.h  main.cpp
fusion/src/Fusion/ops/LinAlg/: Add.h  Divide.h  LinAlg.h  Multiply.h  Operation.h  Pow.h  Subtract.h
fusion/src/Fusion/ops/Transcendental/: Exp.h  Log.h
fusion/src/Fusion/physics/core/: NeighbourSort.cpp  NeighbourSort.hpp  Neighbours.hpp  PhysicsIter.hpp  PhysicsMeta.hpp  PhysicsPlan.h  PhysicsPlan.hpp  PhysicsPlanMeta.hpp  State.hpp
fusion/src/Fusion/physics/potentials/: LJ.hpp
fusion/src/Fusion/physics/primitives/: LJ.hpp
fusion/src/Fusion/policies/: Operation.h  main.cpp
fusion/src/Fusion/policies/Comparison/: Comparison.h  GreaterThan.h  Maximum.h
fusion/src/Fusion/policies/LinAlg/: Add.h  Divide.h  LinAlg.h  MatMul.h  Multiply.h  Pow.h  Subtract.h
fusion/src/Fusion/policies/Reduction/: Reduction.h  Sum.h
fusion/src/Fusion/policies/Shape/: Transpose.h
fusion/src/Fusion/policies/Transcendental/: Exp.h  Log.h  Sqrt.h
fusion/src/Fusion/python/: Bindings.cpp  bind_tensor.h  bindings.cpp  helpers.h
fusion/src/Fusion/python/factory/: BindFactory.h  BindFactory.hpp  bind_factory.h
fusion/src/Fusion/python/random/: BindRandom.h  BindRandom.hpp  bind_random.h
fusion/src/Fusion/python/tensor/: BindTensor.h  BindTensor.hpp  Helpers.h  Helpers.hpp  bind_tensor.h  helpers.h
fusion/src/Fusion/storage/: DenseStorage.h  DenseStorage.hpp  StorageInterface.h  StorageInterface.hpp  TensorBuffer.h  TensorBuffer.hpp  TensorView.h  TensorView.hpp  dense_storage.h  storage_interface.h
fusion/src/Fusion/tensor/: eigen_helpers.h  eigen_tensor.h  storage_tensor.h  tensor.h  tensor_algorithms.ipp  tensor_arithmetic.ipp  tensor_constructors.ipp  tensor_dev.cpp  tensor_io.ipp  tensor_ops.tpp  tensor_reductions.ipp
fusion/src/Fusion/tests/: tensor_cpu_tests.cpp  tensor_ops_tests.cpp
(+313 files in other folders)
