[tool.poetry]
name = "neurothread"
version = "0.1.0"
description = "A lightweight deep learning framework that leverages multithreading in python3.13"
authors = ["pytergeist <tompopeworks@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
