[tool.poetry]
name = "nova"
version = "0.1.1"
description = "A deep learning framework build with python3.13 and c++20"
authors = ["pytergeist <tompopeworks@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pybind11 = "^2.13.6"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
sphinx = "^8.2.1"
sphinx-autodoc-typehints = "^3.1.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^3.0.2"
pytest-cov = "^6.0.0"
torch = "2.6.0"
pre-commit = "^4.1.0"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"
